--- a/resolve-path/package.json
+++ b/resolve-path/package.json
@@ -1,8 +1,8 @@
 {
   "name": "resolve-path",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
-    "test": "./node_modules/.bin/tap test.js --harmony"
+    "test": "./node_modules/.bin/tap test.js"
   },
   "devDependencies": {
     "tap": "10.3.2"
